Fix wrapping on "Never said" box

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -387,7 +387,7 @@ a:hover {
     color: var(--foreground)
 }
 
-.never-said {
+.never-said caption {
     width: 400px;
 }
 
